# simple_package_files_example

./: .gitignore  README.md  conanfile.py  run.py  run2.py
hello_lib/: CMakeLists.txt
test_package/: conanfile.py
